--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,9 @@
     <string name="invalid_username">Correo electronico no valido</string>
     <string name="invalid_password">Contraseña debe ser > 5 caracteres</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="pagar">Tu + %1$d persona</string>
+    <string name="pagar">Tú + %1$d personas</string>
+    <string name="pagaruna">Tú + %1$d persona</string>
+    <string name="totalPrice">$%1$.2f</string>
 
     <string name="title_activity_camera">CameraActivity</string>
     <string name="dummy_button">Dummy Button</string>
@@ -23,4 +25,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
